[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/OptionsMenuScreen.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="OptionsMenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 510.0
margin_bottom = 14.0
text = "Graphics"
align = 1

[node name="graphics_options" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 38.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 11

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 510.0
margin_bottom = 14.0
text = "Screen Mode"
align = 1

[node name="screenmode_options" type="OptionButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 38.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 42.0
margin_right = 510.0
margin_bottom = 56.0
text = "Resolution"
align = 1

[node name="res_options" type="OptionButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 510.0
margin_bottom = 80.0
